employee section and delivery section done with responsive

--- a/css/style.css
+++ b/css/style.css
@@ -531,6 +531,132 @@ a{
     transform: translate(-20px, 0px);
 }
 
+.employee
+{
+    padding: 6% 0;
+    text-align: center;
+    background-color: #111;
+}
+
+.employee .heading2
+{
+    
+}
+
+.employee .heading2 h1
+{
+    font-size: 40px;
+    color: white;
+    margin-bottom: 0;
+}
+
+.employee .heading2 p
+{
+    color: grey;
+    margin-bottom: 0;
+    font-size: 14px;
+    padding-top: 10px;
+}
+
+.employee .wrapper3 
+{
+    padding-top: 5%;
+}
+
+.employee .wrapper3 .img4
+{
+  
+}
+
+.employee  .wrapper3 .img4 img
+{
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    object-position: top;
+}
+
+.employee  .wrapper3 a
+{
+
+}
+
+.employee  .wrapper3 p
+{
+    padding-top: 5%;
+    color: #bfbfbf;
+    font-size: 15px;
+    margin-bottom: 0;
+}
+
+.employee  .wrapper3 h6
+{
+    font-size: 20px;
+    color: white;
+    margin-bottom: 0;
+}
+
+.delivery 
+{
+    padding: 5% 0;
+    background-color: #e1f1ff;
+}
+
+.delivery .gif1
+{
+
+}
+
+.delivery .gif1 img
+{
+    width: 100%;
+}
+
+.delivery .heading3
+{
+    text-align: center;
+}
+
+.delivery .heading3 h1
+{
+    font-size: 40px;
+    margin-bottom: 0;
+    color: black;
+}
+
+.delivery .heading3 p
+{
+    color: gray;
+    font-size: 15px;
+    padding-top: 5%;
+    margin-bottom: 0;
+}
+
+.delivery .heading3 .btn4
+{
+    margin-top: 5%;
+}
+
+.delivery .heading3 .btn4 a
+{
+    background-color: #2bb673;
+    padding: 7px 30px 7px 30px;
+    border: 1px solid #1d7194;
+    border-radius: 6px;
+    color: white;
+    font-size: 16px;
+}
+
+
+.delivery .heading3 .btn4 a:hover
+{
+    background-color: #111;
+    color: #2bb673;
+    opacity: 0.5s;
+    transition: 0.5s;
+}
+
+
 
 
 
@@ -694,6 +820,26 @@ a{
         transform: translate(10px, 0px);
         width: 40%
     }
+
+    .employee .heading2 p
+    {
+        font-size: 13px;
+    }
+
+    .delivery .gif1
+    {
+        margin-top: 10%;
+    }
+
+    .delivery .heading3 h1
+    {
+        font-size: 30px;
+    }
+
+    .delivery .heading3 p
+    {
+        font-size: 12px;
+    }
 }
 
 @media screen and (max-width: 600px)
@@ -758,6 +904,31 @@ a{
     {
         top: -70px;
         transform: translate(-10px, 0px);
+    }
+
+    .employee
+    {
+        padding: 10% 0;
+    }
+
+    .employee .heading2 p
+    {
+        font-size: 13px;
+    }
+
+    .delivery
+    {
+        padding: 7% 0;
+    }
+
+    .delivery .heading3
+    {
+        padding-top: 5%;
+    }
+
+    .delivery .heading3 p
+    {
+        font-size: 13px;
     }
 
 
