--- a/css/style.css
+++ b/css/style.css
@@ -538,11 +538,6 @@ a{
     background-color: #111;
 }
 
-.employee .heading2
-{
-    
-}
-
 .employee .heading2 h1
 {
     font-size: 40px;
@@ -563,22 +558,13 @@ a{
     padding-top: 5%;
 }
 
-.employee .wrapper3 .img4
-{
-  
-}
-
 .employee  .wrapper3 .img4 img
 {
     width: 100%;
     height: 200px;
     object-fit: cover;
     object-position: top;
-}
-
-.employee  .wrapper3 a
-{
-
+    border-radius: 5px;
 }
 
 .employee  .wrapper3 p
@@ -600,11 +586,6 @@ a{
 {
     padding: 5% 0;
     background-color: #e1f1ff;
-}
-
-.delivery .gif1
-{
-
 }
 
 .delivery .gif1 img
@@ -690,8 +671,9 @@ a{
 
 .pricing  .wrapper4 .price1
 {
-    background-color: #f7f4f4;
+    background-color: #d8d8d8;
     padding: 15% 0;
+    border-radius: 5px;
 }
 
 .pricing  .wrapper4 .price1:hover
@@ -772,6 +754,55 @@ a{
     padding-right: 10px;
     color: black;
 }
+
+.clients
+{
+    padding: 5% 0;
+}
+
+.clients .heading6
+{
+    text-align: center;
+}
+
+.clients .heading6 h1
+{
+    font-size: 40px;
+    margin-bottom: 0;
+    color: black;
+}
+
+.clients .heading6 p
+{
+    font-size: 14px;
+    padding-top: 10px;
+    margin-bottom: 0;
+    color: grey;
+}
+
+.clients .wrapper5 .job 
+{
+    text-align: center;
+}
+
+.clients .wrapper5 .job .img6
+{
+    padding-top: 20%;
+    cursor: pointer;
+}
+
+.clients .wrapper5 .job .img6 img
+{
+    height: 150px;
+    margin: auto;
+    display: block;
+    width: 60%;
+    transform: translate(0px, -10px);
+    border-radius: 50%;
+    border: 2px solid grey;
+}
+
+
 
 
 
@@ -969,6 +1000,21 @@ a{
     {
         font-size: 12px;
     }
+
+    .clients
+    {
+        padding: 7% 0;
+    }
+
+    .clients .heading6 p
+    {
+        font-size: 13px;
+    }
+
+    .clients .wrapper5 .job .img6 img
+    {
+        width: 25%;
+    }
 }
 
 @media screen and (max-width: 600px)
@@ -1073,6 +1119,21 @@ a{
     .pricing .wrapper4 .price1
     {
         margin-top: 5%;
+    }
+
+    .clients
+    {
+        padding: 7% 0;
+    }
+
+    .clients .heading6 p
+    {
+        font-size: 13px;
+    }
+
+    .clients .wrapper5 .job .img6 img
+    {
+        width: 40%;
     }
 
 
